--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,13 +1,13 @@
 body {
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 .container {
     width: 100%;
     height: 100%;
-    padding-top: 246px;
-    padding-bottom: 246px;
+    padding-top: 146px;
+    padding-bottom: 146px;
     background: white;
     justify-content: center;
     align-items: center;
@@ -24,7 +24,7 @@ body {
     width: 409.48px;
     height: 412px;
     left: 25px;
-    top: 62px;
+    top: 42px;
     position: absolute;
 }
 
@@ -60,7 +60,6 @@ body {
     font-weight: 600;
     line-height: 28px;
     word-wrap: break-word;
-    font-family: Poppins;
 }
 
 .text-default {
@@ -71,7 +70,6 @@ body {
     font-weight: 400;
     line-height: 28px;
     word-wrap: break-word;
-    font-family: Poppins;
 }
 
 
@@ -86,7 +84,7 @@ body {
     width: 409.48px;
     height: 184px;
     left: 0px;
-    top: 245px;
+    top: 265px;
     position: absolute;
     flex-direction: column;
     justify-content: center;
