--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -76,7 +76,7 @@ body {
 .line {
     width: 100%;
     height: 0px;
-    border: 1px rgba(0, 0, 0, 0.16) dotted;
+    border: 1px rgba(0, 0, 0, 0.16) solid;
     margin: 16px 0;
 }
 
