--- a/templates/page.html
+++ b/templates/page.html
@@ -22,9 +22,9 @@
             <div class="content">
                 <div class="content-box">
                     <div class="circle">
-                        <svg width="57" height="56" viewBox="0 0 57 56" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="28.7397" cy="28" r="28" fill="#41D195" fill-opacity="0.12"/>
-                            <path d="M28.2397 14.6665C20.893 14.6665 14.9064 20.6532 14.9064 27.9998C14.9064 35.3465 20.893 41.3332 28.2397 41.3332C35.5864 41.3332 41.573 35.3465 41.573 27.9998C41.573 20.6532 35.5864 14.6665 28.2397 14.6665ZM34.613 24.9332L27.053 32.4932C26.8664 32.6798 26.613 32.7865 26.3464 32.7865C26.0797 32.7865 25.8264 32.6798 25.6397 32.4932L21.8664 28.7198C21.4797 28.3332 21.4797 27.6932 21.8664 27.3065C22.253 26.9198 22.893 26.9198 23.2797 27.3065L26.3464 30.3732L33.1997 23.5198C33.5864 23.1332 34.2264 23.1332 34.613 23.5198C34.9997 23.9065 34.9997 24.5332 34.613 24.9332Z" fill="#41D195"/>
+                        <svg width="57" height="57" viewBox="0 0 57 57" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="56.6667" height="56.6667" rx="28.3333" fill="#40D195" fill-opacity="0.12"/>
+                            <path d="M28.3333 15C20.9867 15 15 20.9867 15 28.3333C15 35.68 20.9867 41.6667 28.3333 41.6667C35.68 41.6667 41.6667 35.68 41.6667 28.3333C41.6667 20.9867 35.68 15 28.3333 15ZM34.7067 25.2667L27.1467 32.8267C26.96 33.0133 26.7067 33.12 26.44 33.12C26.1733 33.12 25.92 33.0133 25.7333 32.8267L21.96 29.0533C21.5733 28.6667 21.5733 28.0267 21.96 27.64C22.3467 27.2533 22.9867 27.2533 23.3733 27.64L26.44 30.7067L33.2933 23.8533C33.68 23.4667 34.32 23.4667 34.7067 23.8533C35.0933 24.24 35.0933 24.8667 34.7067 25.2667Z" fill="#41D195"/>
                         </svg>
                         <div class="arrow-container">
                             <div class="arrow">
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="info-box">
-                    <div class="line"></div>
+                        <div class="line"></div>
                     <div class="info">
                         <div class="info-row">
                             <div class="info-label">Назначение:</div>
